# Test_Projects

./: .gitignore  LICENSE
Calculator/: CMakeLists.txt  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
Calculator/apps/: CMakeLists.txt  app1.cc  app2.cc
Calculator/src/: CMakeLists.txt
Calculator/src/div/: CMakeLists.txt  div.cc
Calculator/src/div/private/: private_subs.cc  private_subs.h
Calculator/src/factorial/: CMakeLists.txt  factorial.cc
Calculator/src/include/: div.h  factorial.h  mult.h  square.h  subs.h  sum.h
Calculator/src/mult/: CMakeLists.txt  mult.cc
Calculator/src/mult/private/: private_sum.cc  private_sum.h
Calculator/src/square/: CMakeLists.txt  square.cc
Calculator/src/subs/: CMakeLists.txt  subs.cc
Calculator/src/sum/: CMakeLists.txt  sum.cc
Calculator/tests/: CMakeLists.txt
Calculator/tests/div/: CMakeLists.txt  div_test.cc
Calculator/tests/factorial/: CMakeLists.txt  factorial_test.cc
Calculator/tests/mult/: CMakeLists.txt  mult_test.cc
Calculator/tests/square/: CMakeLists.txt  square_test.cc
Calculator/tests/subs/: CMakeLists.txt  subs_test.cc
Calculator/tests/sum/: CMakeLists.txt  sum_test.cc
LibManSys/: CMakeLists.txt  lib_man_sys.cc  lib_test  lib_test.cc
Queue/: CMakeLists.txt  main  queue.cc
Queue/test/: CMakeLists.txt  queue_test.cc
currency_converter/: CMakeLists.txt  ConverterConfig.h.in  License.txt  main.cc
currency_converter/converter/: CMakeLists.txt  converter.cc
test/: CMakeLists.txt  queue.cc  queue_test.cc  runTests
